updated: - added code for issue #15.

--- a/WSUI.Module/View/EmailDataView.xaml
+++ b/WSUI.Module/View/EmailDataView.xaml
@@ -15,6 +15,26 @@
                 <!--<Resource   Dictionary Source="..\Themes\Generic.xaml" />-->
             </ResourceDictionary.MergedDictionaries>
             <service:CountToFormatStringConvert x:Key="countConverter" />
+
+            <Style x:Key="NameStyleWidthColumn" TargetType="ColumnDefinition">
+                <Setter Property="Width" Value="150" />
+                <Setter Property="MinWidth" Value="100" />
+            </Style>
+
+            <Style x:Key="CountStyleWidthColumn" TargetType="ColumnDefinition">
+                <Setter Property="Width" Value="30" />
+            </Style>
+
+            <Style x:Key="SubjectStyleWidthColumn" TargetType="ColumnDefinition">
+                <Setter Property="Width" Value="250" />
+            </Style>
+
+            <Style x:Key="FromStyleWidthColumn" TargetType="ColumnDefinition">
+                <Setter Property="Width" Value="200" />
+            </Style>
+
+
+
         </ResourceDictionary>
     </Controls:MetroContentControl.Resources>
     
@@ -30,16 +50,22 @@
                 <DataTemplate>
                     <DockPanel LastChildFill="True">
                         <Image Grid.Column="0" Source="..\Images\mail.png" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
-                        <StackPanel Orientation="Horizontal" DockPanel.Dock="Left">
-                            <!--<TextBlock Text="{Binding Recepient}" FontWeight="Bold" Margin="5 3 5 3"/>-->
-                            <ctrl:HightliteTextBlock Text="{Binding Path=Recepient}" Hightlight="{Binding Path=DataContext.SearchString,ElementName=this}"  FontStyleLabel="Italic"
-                                                       Margin="5 3 5 3"/>
-                            <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3"></TextBlock>
-                        </StackPanel>
                         <TextBlock Text="{Binding Path=Date,Converter={StaticResource dateConverter}}" Grid.Column="2" Margin="5" DockPanel.Dock="Right"/>
-                        <!--<TextBlock Text="{Binding Path=Name}" Grid.Column="1" Margin="5"/>-->
-                        <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,ElementName=this}"  
-                                                       Margin="5"/>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Style="{StaticResource NameStyleWidthColumn}" />
+                                <ColumnDefinition Style="{StaticResource CountStyleWidthColumn}"/>
+                                <ColumnDefinition Style="{StaticResource SubjectStyleWidthColumn}" />
+                            </Grid.ColumnDefinitions>
+                            <ctrl:HightliteTextBlock Text="{Binding Path=Recepient}" Hightlight="{Binding Path=DataContext.SearchString,ElementName=this}"  FontStyleLabel="Italic"
+                                                       Margin="5 3 5 3" Grid.Column="0"/>
+                            <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3" Grid.Column="1"></TextBlock>
+                        
+
+                            <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,ElementName=this}"  
+                                                       Margin="5" Grid.Column="2"/>
+
+                        </Grid>
                     </DockPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
