--- a/WSUI.Module/View/AttachmentSettingsView.xaml
+++ b/WSUI.Module/View/AttachmentSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<Controls:MetroContentControl x:Class="WSUI.Module.View.AttachmentSettingsView"
+﻿<UserControl x:Class="WSUI.Module.View.AttachmentSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -34,4 +34,4 @@
             </TabItem>
         </TabControl>
     </Grid>
-</Controls:MetroContentControl>
+</UserControl>
