--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -44,16 +44,13 @@
     <DataTemplate x:Key="NoneTemplate">
         <DockPanel LastChildFill="True">
             <Image Grid.Column="0" Source="..\Images\document-smiley-sad.png" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
-            <TextBlock Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}" Grid.Column="2" Margin="5" DockPanel.Dock="Right"/>
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Style="{StaticResource NameStyleWidthColumn}" />
-                    <ColumnDefinition Style="{StaticResource CountStyleWidthColumn}"/>
+                    <ColumnDefinition  />
+                    <ColumnDefinition  />
                 </Grid.ColumnDefinitions>
                 <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
-                                                        Grid.Column="0"   Margin="5"/>
-                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
-                           Grid.Column="1"></TextBlock>
+                                                        Grid.Column="0" Grid.ColumnSpan="2"   Margin="5"/>
             </Grid>
         </DockPanel>
     </DataTemplate>
