--- a/WSUI/MainWindow.xaml
+++ b/WSUI/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        
         mc:Ignorable="d"
     
     xmlns:cal="http://www.codeplex.com/CompositeWPF"
@@ -14,20 +15,12 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />
-                
+                <!--<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />-->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
-
-    <Controls:MetroWindow.WindowCommands>
-        <Controls:WindowCommands>
-            <!--<Button Content="Light" Click="Button_Click"/>
-            <Button Content="Dark"  Click="Button_Click_1"/>-->
-        </Controls:WindowCommands>
-    </Controls:MetroWindow.WindowCommands>
 
     <AdornerDecorator>
         <Grid Margin="7" x:Name="grid">
