updated: - code for #21, #24;

--- a/WSUI.Module/View/ContactDataView.xaml
+++ b/WSUI.Module/View/ContactDataView.xaml
@@ -65,7 +65,8 @@
 
             <service:ContactDataTemplateSelector x:Key="contactTemplateSelector"  
                                                 EmailTemplate="{StaticResource ResourceKey=EmailTemplate}"
-                                                ContactTemplate="{StaticResource ResourceKey=ContactTemplate}" />
+                                                ContactTemplate="{StaticResource ResourceKey=ContactTemplate}" 
+                                                NoneTemplate="{StaticResource ResourceKey=NoneTemplate}"/>
 
         </ResourceDictionary>
     </UserControl.Resources>
