--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -33,7 +33,7 @@
     </Style>
 
     <Style x:Key="SubjectStyleWidthColumn" TargetType="ColumnDefinition">
-        <Setter Property="Width" Value="350" />
+        <Setter Property="Width" Value="300" />
     </Style>
 
     <Style x:Key="FromStyleWidthColumn" TargetType="ColumnDefinition">
@@ -122,7 +122,7 @@
 
     <DataTemplate x:Key="FileTemplate">
         <DockPanel LastChildFill="True"><!--"..\Images\document.png"-->
-            <Image Grid.Column="0" Source="{Binding Path=Name,Converter={StaticResource ResourceKey=nameConverter}}" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
+            <Image  Source="{Binding Path=Name,Converter={StaticResource ResourceKey=nameConverter}}" Style="{StaticResource ImageStyle}" DockPanel.Dock="Left"/>
             <TextBlock Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" DockPanel.Dock="Right"/>
             <Grid>
                 <Grid.ColumnDefinitions>
