added scrolling to another kinds

--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -204,6 +204,7 @@
     
     <ContextMenu x:Key="contextMenu">
         <MenuItem Header="Open file"  Command="{Binding OpenCommand}"/>
+        <MenuItem Header="Open folder"  Command="{Binding OpenFolderCommand}"/>
     </ContextMenu>
 
 
